--- a/index.html
+++ b/index.html
@@ -1,61 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good Eats - Street Tacos</title>
 </head>
+
 <body>
     <header>
-     
+
     </header>
     <main>
-        <section id="intro">
+        <section id="street-tacos">
             <h1>Street Tacos</h1>
-                <buton aria-label="Save">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <ul>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
                         <polyline points="7 11 12 16 17 11" />
                         <line x1="12" y1="4" x2="12" y2="16" />
-                      </svg>
-                </buton>
-                <buton aria-label="Share">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-share" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    </svg>
+                    Save
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-share" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <circle cx="6" cy="12" r="3" />
                         <circle cx="18" cy="6" r="3" />
                         <circle cx="18" cy="18" r="3" />
                         <line x1="8.7" y1="10.7" x2="15.3" y2="7.3" />
                         <line x1="8.7" y1="13.3" x2="15.3" y2="16.7" />
-                      </svg>
-                </buton>
-                <buton aria-label="Print">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-printer" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    </svg>
+                    Share
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-printer" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" />
                         <path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" />
                         <rect x="7" y="13" width="10" height="8" rx="2" />
-                      </svg>
-                </buton>
-                <buton aria-label="Jump to Recipe">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-symlink" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    </svg>
+                    Print
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-symlink" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M4 21v-4a3 3 0 0 1 3 -3h5" />
                         <path d="M9 17l3 -3l-3 -3" />
                         <path d="M14 3v4a1 1 0 0 0 1 1h4" />
                         <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
-                      </svg>
-                </buton>
-            <img src="/images/street-tacos.png" alt="Street tacos on a plate"/>
-                <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!
-                </p>
-                <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!
-                </p>
+                    </svg>
+                    Jump to Recipe
+                </li>
+            </ul>
+            <img src="/images/street-tacos.png" alt="Street tacos on a plate" />
+            <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor
+                with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!
+            </p>
+            <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the
+                meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me,
+                try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef
+                tacos will not disappoint!!
+            </p>
         </section>
-        <section>
+        <section id="details">
             <h2>Details</h2>
             <dl>
                 <dt>Prep Time: </dt>
@@ -70,6 +89,64 @@
                 <dd>6 Tacos</dd>
             </dl>
         </section>
+        <section id="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Flank Steak</li>
+                <li>Soy Sauce</li>
+                <li>Worcestershire Sauce</li>
+                <li>Lime</li>
+                <li>Minced Garlic</li>
+                <li>Cilantro</li>
+                <li>Chili Powder</li>
+                <li>Cumin</li>
+                <li>Salt</li>
+                <li>Pepper</li>
+                <li>Corn Tortillas</li>
+            </ul>
+        </section>
+        <section id="directions">
+            <h2>Directions</h2>
+            <ol>
+                <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce,
+                    Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.
+                </li>
+                <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.
+                </li>
+                <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook
+                    for about 5-7 minutes or until no longer pink.
+                </li>
+                <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.
+                </li>
+            </ol>
+        </section>
+        <aside>
+            <h2>Need Some Side Dishes?</h2>
+            <article>
+                <h3>Mexican Rice</h3>
+                <img src="/images/mexican-rice.png" alt="Mexican Rice" />
+                <p>Traditional recipe with a twist.</p>
+                <p>Rating</p>
+            </article>
+            <article>
+                <h3>Salsa</h3>
+                <img src="/images/salsa.png" alt="Salsa" />
+                <p>Just the right amount of spice.</p>
+                <p>Rating</p>
+            </article>
+            <article>
+                <h3>Guacamole</h3>
+                <img src="/images/guacamole.png" alt="Guacamole" />
+                <p>Fresh and healthy.</p>
+                <p>Rating</p>
+            </article>
+            <article>
+                <h3>Tortillas</h3>
+                <img src="/images/tortillas.png" alt="Tortillas" />
+                <p>Easy to make and so good.</p>
+                <p>Rating</p>
+            </article>
+        </aside>
     </main>
     <nav id="main-nav">
         <h2>Menu</h2>
@@ -79,9 +156,53 @@
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
         </ul>
+
     </nav>
     <footer>
-
+        <section>
+            <h2>Connect</h2>
+            <h3>Social Media Links</h3>
+            <ul>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                      </svg>
+                    Facebook
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <rect x="4" y="4" width="16" height="16" rx="4" />
+                        <circle cx="12" cy="12" r="3" />
+                        <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                      </svg>
+                    Instagram
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <rect x="3" y="5" width="18" height="14" rx="4" />
+                        <path d="M10 9l5 3l-5 3z" />
+                      </svg>
+                    YouTube
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
+                      </svg>
+                    Tik Tok
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>Good Eats</h3>
+            <small>Copyright 2022</small>
+            <small>Taco Cheesington</small>
+            <img src="/images/taco-cheesington.png" />
+        </section>
     </footer>
 </body>
-</html> 
+
+</html>
