--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
                             <path d="M14 3v4a1 1 0 0 0 1 1h4" />
                             <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
                         </svg>
-                        Jump to Recipe
+                        Jump<span class="hide-text">to Recipe</span>
                     </a>
                 </li>
             </menu>
             <img src="/images/street-tacos.png" alt="Street tacos on a plate" />
+            <div id="street-tacos-text">
             <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor
                 with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!
             </p>
@@ -80,6 +81,7 @@
                 try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef
                 tacos will not disappoint!!
             </p>
+        </div>
         </section>
     </header>
     <!-- Main Content begins -->
@@ -373,43 +375,43 @@
                     <span class="visually-hidden">Home</span>
                 </a>
             </li>
-            <li class="extended-main-nav">
+            <li class="extended-main-nav" id="breakfast">
                 <a href="#">
                     <img src="/images/breakfast.png" alt="Eggs in a pan">
                     Breakfast
                 </a>
             </li>
-            <li class="extended-main-nav">
+            <li class="extended-main-nav" id="brunch">
                 <a href="#">
                     <img src="/images/brunch.png" alt="Breakfast image">
                     Brunch
                 </a>
             </li>
-            <li class="extended-main-nav">
+            <li class="extended-main-nav" id="lunch">
                 <a href="#">
                     <img src="/images/lunch.png" alt="Lunch image">
                     Lunch
                 </a>
             </li>
-            <li class="extended-main-nav">
+            <li class="extended-main-nav" id="dinner">
                 <a href="#">
                     <img src="/images/dinner.png" alt="Dinner image">
                     Dinner
                 </a>
             </li>
-            <li class="extended-main-nav">
+            <li class="extended-main-nav" id="appetizers">
                 <a href="#">
                     <img src="/images/appetizers.png" alt="Appetizers image">
                     Appetizers
                 </a>
             </li>
-            <li class="extended-main-nav">
+            <li class="extended-main-nav" id="desserts">
                 <a href="#">
                     <img src="/images/desserts.png" alt="Desserts image">
                     Desserts
                 </a>
             </li>
-            <li class="extended-main-nav">
+            <li class="extended-main-nav" id="beverages">
                 <a href="#">
                     <img src="/images/beverages.png" alt="Beverages image">
                     Beverages
@@ -427,7 +429,7 @@
                         <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
                     </svg>
                     <span>Sign In
-                        <span id="up-text">/Up</span>
+                        <span class="hide-text">/Up</span>
                     </span>
                 </a>
             </li>
@@ -504,8 +506,10 @@
         <!-- Section: Copyright -->
         <section id="copyright">
             <h3 class="visually-hidden">Good Eats</h3>
-            <small>Copyright 2022</small>
-            <small>Taco Cheesington</small>
+                <div id="small-text">
+                    <small>Copyright 2022</small>
+                    <small>Taco Cheesington</small>
+                </div>    
             <img src="/images/taco-cheesington.png" />
         </section>
     </footer>
