--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </a>
                 </li>
             </menu>
-            <img src="/images/street-tacos.png" alt="Street tacos on a plate" />
+            <img src="/images/street-tacos.png" alt="Street tacos on a plate">
             <div id="street-tacos-text">
             <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor
                 with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!
@@ -144,7 +144,7 @@
         <h2>Need Some Side Dishes?</h2>
         <!-- Section: Mexican Rice -->
         <section class="side-dish" id="mexican-rice">
-            <a href="#"><img src="/images/mexican-rice.png" alt="Mexican Rice" /></a>
+            <a href="#"><img src="/images/mexican-rice.png" alt="Mexican Rice"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Mexican Rice</a></h3>
                 <p>Traditional recipe with a twist.</p>
@@ -152,7 +152,7 @@
                     <dt>Rating</dt>
                     <dd>4 of 5 stars</dd>
                 </dl>
-                <div class="stars" aria-label="4 out of 5 stars">
+                <div class="stars">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star filled-star"
                         width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff"
                         stroke-linecap="round" stroke-linejoin="round">
@@ -192,8 +192,8 @@
             </div>
         </section>
         <!-- Section: Salsa -->
-        <section class="side-dish" id="tortillas">
-            <a href="#"><img src="/images/salsa.png" alt="Salsa" /></a>
+        <section class="side-dish" id="salsa">
+            <a href="#"><img src="/images/salsa.png" alt="Salsa"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Salsa</a></h3>
                 <p>Just the right amount of spice.</p>
@@ -201,7 +201,7 @@
                     <dt>Rating</dt>
                     <dd>5 of 5 stars</dd>
                 </dl>
-                <div class="stars" aria-label="5 out of 5 stars">
+                <div class="stars">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star filled-star"
                         width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff"
                         stroke-linecap="round" stroke-linejoin="round">
@@ -242,7 +242,7 @@
         </section>
         <!-- Section: Guacamole -->
         <section class="side-dish" id="guacamole">
-            <a href="#"><img src="/images/guacamole.png" alt="Guacamole" /></a>
+            <a href="#"><img src="/images/guacamole.png" alt="Guacamole"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Guacamole</a></h3>
                 <p>Fresh and healthy.</p>
@@ -250,7 +250,7 @@
                     <dt>Rating</dt>
                     <dd>4 of 5 stars</dd>
                 </dl>
-                <div class="stars" aria-label="4 out of 5 stars">
+                <div class="stars">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star filled-star"
                         width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff"
                         stroke-linecap="round" stroke-linejoin="round">
@@ -291,7 +291,7 @@
         </section>
         <!-- Section: Tortillas -->
         <section class="side-dish" id="tortillas">
-            <a href="#"><img src="/images/tortillas.png" alt="Tortillas" /></a>
+            <a href="#"><img src="/images/tortillas.png" alt="Tortillas"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Tortillas</a></h3>
                 <p>Easy to make and so good.</p>
@@ -299,7 +299,7 @@
                     <dt>Rating</dt>
                     <dd>4 of 5 stars</dd>
                 </dl>
-                <div class="stars" aria-label="4 out of 5 stars">
+                <div class="stars">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star filled-star"
                         width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff"
                         stroke-linecap="round" stroke-linejoin="round">
@@ -343,7 +343,7 @@
     <nav id="main-nav">
         <h2>Main Navigation</h2>
         <!-- Hamburger Menu -->
-        <a href="#" class="menu-toggle" aria-label="Open Main Navigation Menu">
+        <a href="#" class="menu-toggle">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" style="enable-background:new 0 0 40 40"
                 xml:space="preserve">
                 <path
@@ -510,7 +510,7 @@
                     <small>Copyright 2022</small>
                     <small>Taco Cheesington</small>
                 </div>    
-            <img src="/images/taco-cheesington.png" />
+            <img src="/images/taco-cheesington.png" alt="Taco Chessington">
         </section>
     </footer>
 </body>
