--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </a>
                 </li>
             </menu>
-            <img src="/images/street-tacos.png" alt="Street tacos on a plate">
+            <img src="images/street-tacos.png" alt="Street tacos on a plate">
             <div id="street-tacos-text">
             <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor
                 with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!
@@ -144,7 +144,7 @@
         <h2>Need Some Side Dishes?</h2>
         <!-- Section: Mexican Rice -->
         <section class="side-dish" id="mexican-rice">
-            <a href="#"><img src="/images/mexican-rice.png" alt="Mexican Rice"></a>
+            <a href="#"><img src="images/mexican-rice.png" alt="Mexican Rice"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Mexican Rice</a></h3>
                 <p>Traditional recipe with a twist.</p>
@@ -193,7 +193,7 @@
         </section>
         <!-- Section: Salsa -->
         <section class="side-dish" id="salsa">
-            <a href="#"><img src="/images/salsa.png" alt="Salsa"></a>
+            <a href="#"><img src="images/salsa.png" alt="Salsa"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Salsa</a></h3>
                 <p>Just the right amount of spice.</p>
@@ -242,7 +242,7 @@
         </section>
         <!-- Section: Guacamole -->
         <section class="side-dish" id="guacamole">
-            <a href="#"><img src="/images/guacamole.png" alt="Guacamole"></a>
+            <a href="#"><img src="images/guacamole.png" alt="Guacamole"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Guacamole</a></h3>
                 <p>Fresh and healthy.</p>
@@ -291,7 +291,7 @@
         </section>
         <!-- Section: Tortillas -->
         <section class="side-dish" id="tortillas">
-            <a href="#"><img src="/images/tortillas.png" alt="Tortillas"></a>
+            <a href="#"><img src="images/tortillas.png" alt="Tortillas"></a>
             <div class="side-dish-text">
                 <h3><a href="#">Tortillas</a></h3>
                 <p>Easy to make and so good.</p>
@@ -377,43 +377,43 @@
             </li>
             <li class="extended-main-nav" id="breakfast">
                 <a href="#">
-                    <img src="/images/breakfast.png" alt="Eggs in a pan">
+                    <img src="images/breakfast.png" alt="Eggs in a pan">
                     Breakfast
                 </a>
             </li>
             <li class="extended-main-nav" id="brunch">
                 <a href="#">
-                    <img src="/images/brunch.png" alt="Breakfast image">
+                    <img src="images/brunch.png" alt="Breakfast image">
                     Brunch
                 </a>
             </li>
             <li class="extended-main-nav" id="lunch">
                 <a href="#">
-                    <img src="/images/lunch.png" alt="Lunch image">
+                    <img src="images/lunch.png" alt="Lunch image">
                     Lunch
                 </a>
             </li>
             <li class="extended-main-nav" id="dinner">
                 <a href="#">
-                    <img src="/images/dinner.png" alt="Dinner image">
+                    <img src="images/dinner.png" alt="Dinner image">
                     Dinner
                 </a>
             </li>
             <li class="extended-main-nav" id="appetizers">
                 <a href="#">
-                    <img src="/images/appetizers.png" alt="Appetizers image">
+                    <img src="images/appetizers.png" alt="Appetizers image">
                     Appetizers
                 </a>
             </li>
             <li class="extended-main-nav" id="desserts">
                 <a href="#">
-                    <img src="/images/desserts.png" alt="Desserts image">
+                    <img src="images/desserts.png" alt="Desserts image">
                     Desserts
                 </a>
             </li>
             <li class="extended-main-nav" id="beverages">
                 <a href="#">
-                    <img src="/images/beverages.png" alt="Beverages image">
+                    <img src="images/beverages.png" alt="Beverages image">
                     Beverages
                 </a>
             </li>
@@ -510,7 +510,7 @@
                     <small>Copyright 2022</small>
                     <small>Taco Cheesington</small>
                 </div>    
-            <img src="/images/taco-cheesington.png" alt="Taco Chessington">
+            <img src="images/taco-cheesington.png" alt="Taco Chessington">
         </section>
     </footer>
 </body>
